yarn upgrade all

--- a/package.json
+++ b/package.json
@@ -28,21 +28,21 @@
     ]
   },
   "devDependencies": {
-    "babel": "^6.20.0",
-    "babel-cli": "^6.23.0",
-    "babel-eslint": "^7.1.1",
-    "babel-jest": "^18.0.0",
-    "babel-plugin-transform-async-to-generator": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.22.0",
-    "babel-preset-babili": "0.0.11",
-    "babel-preset-env": "^1.1.8",
-    "dotenv": "^4.0.0",
-    "eslint": "^3.14.1",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-babili": "^0.1.4",
+    "babel-preset-env": "^1.7.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
     "eslint-config-rackt": "^1.1.1",
-    "jest": "^18.1.0"
+    "jest": "^24.9.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
     "fetch-everywhere": "^1.0.5"
   },
   "repository": {
