--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,14 @@
 {
     "env": {
-        "node": true
-    },
-    ecmaFeatures: {
-        "modules": true,
-        "jsx": true
+        "node": true,
+        "es6": true,
+        "jest": true
     },
     "globals": {
     },
     "plugins": [
-        "react"
+        "jest"
     ],
-    "extends": "rackt",
     "parser": "babel-eslint",
     "rules": {
         // Possible Errors
@@ -54,7 +51,7 @@
         "no-caller": 2,
         "no-div-regex": 2,
         "no-else-return": 2,
-        "no-empty-label": 2,
+        //"no-empty-label": 2,
         "no-eq-null": 2,
         "no-eval": 2,
         "no-extend-native": 2,
@@ -143,7 +140,7 @@
         "quote-props": [2, "as-needed"],
         "semi": [2, "always"],
         "sort-vars": [2, {"ignoreCase": true}],
-        "space-after-keywords": 2,
+        //"space-after-keywords": 2,
         "space-before-blocks": 2,
         "object-curly-spacing": [2, "always", {
             "objectsInObjects": false,
@@ -152,15 +149,15 @@
         "array-bracket-spacing": [2, "never"],
         "space-in-parens": 2,
         "space-infix-ops": 2,
-        "space-return-throw-case": 2,
+        //"space-return-throw-case": 2,
         "space-unary-ops": 2,
         "spaced-comment": 2,
         "wrap-regex": 0,
         // Legacy
         "max-depth": 0,
-        "max-len": [2, 120],
+        "max-len": [2, 160],
         "max-params": 0,
         "max-statements": 0,
-        "no-plusplus": 0,
+        "no-plusplus": 0
     }
 }
