--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "todoist-js",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "The (un)official Todoist javascript API library",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "eslint": "eslint todoist",
-    "build": "node ./node_modules/babel-cli/bin/babel.js -d dist/ todoist/ --source-maps",
-    "prepublish": "npm run build"
-  },
-  "jest": {
-    "transform": {
-      ".*": "<rootDir>/node_modules/babel-jest"
-    }
+    "lint": "eslint todoist",
+    "build": "babel -d dist/ todoist/ --source-maps"
   },
   "keywords": [
     "todoist",
@@ -23,26 +17,33 @@
   "license": "ISC",
   "babel": {
     "presets": [
-      "env",
-      "babili"
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
+  },
+  "jest": {
+    "testMatch": [
+      "**/__tests__/**/*.spec.[jt]s?(x)"
     ]
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-babili": "^0.1.4",
-    "babel-preset-env": "^1.7.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-rackt": "^1.1.1",
+    "eslint-plugin-jest": "^23.2.0",
     "jest": "^24.9.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "fetch-everywhere": "^1.0.5"
   },
   "repository": {
