--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "todoist-js",
   "version": "0.4.0",
   "description": "The (un)official Todoist javascript API library",
-  "main": "dist/index.js",
+  "main": "dist/todoist-js.js",
   "scripts": {
     "test": "jest",
     "test:unit": "yarn test tests/unit",
     "lint": "eslint src",
-    "build": "rm -rf dist/ && babel -d dist/ src/ --source-maps"
+    "build": "webpack"
   },
   "keywords": [
     "todoist",
@@ -45,7 +45,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "babel-eslint": "^10.0.3",
@@ -53,7 +52,9 @@
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.2.0",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "fetch-everywhere": "^1.0.5"
