--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "babel": {
     "presets": [
+      "@babel/preset-typescript",
       [
         "@babel/preset-env",
         {
@@ -26,15 +27,7 @@
           }
         }
       ]
-    ],
-    "env": {
-      "development": {
-        "ignore": [
-          "**/__tests__",
-          "**/*.test.js"
-        ]
-      }
-    }
+    ]
   },
   "jest": {
     "roots": [
@@ -47,12 +40,17 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/jest": "^24.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
+    "awesome-typescript-loader": "^5.2.1",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.2.0",
     "jest": "^24.9.0",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.7.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
