--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-jest": "^23.2.0",
     "jest": "^24.9.0",
     "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
