--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "allowJs": true,
     "target": "esnext",
     "module": "esnext",
-    "strict": false
+    "strict": false,
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "src/**/*.ts",
