--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-typescript": "^7.8.3",
     "@types/jest": "^24.9.0",
+    "@types/node": "^13.1.8",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "awesome-typescript-loader": "^5.2.1",
